Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-106612

qmllint hits assert related to inline components

    XMLWordPrintable

Details

    • ee0e78a1a4 (qt/qtdeclarative/dev) ee0e78a1a4 (qt/tqtc-qtdeclarative/dev) dc6d4f243b (qt/qtdeclarative/6.4) dc6d4f243b (qt/tqtc-qtdeclarative/6.4)

    Description

       

      import QtQuick 2.0
      Item {
       component Base : eItm { }
      }
      

      triggers ASSERT: "!m_nextIsInlineComponent" in file /home/fabian/qt5/qtdeclarative/src/qmlcompiler/qqmljsimportvisitor.cpp, line 1378

       

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            fabiankosmale Fabian Kosmale
            fabiankosmale Fabian Kosmale
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes