qmllint: Don't crash on malformed ic

qmllint assumed that between visit(UiInlineComponent) and endVisit, we
would have encountered an obejct.
That is however only true in valid QML files; in invalid files there
might not be an object definition.

Pick-to: 6.4
Fixes: QTBUG-106612
Change-Id: If353b42aec445258e9cbecbbd60fee00e25e17df
Reviewed-by: Sami Shalayel <sami.shalayel@qt.io>
Reviewed-by: Ulf Hermann <ulf.hermann@qt.io>